# poetry-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bandit.yaml  docker-compose.yml  package-lock.json  pyproject.toml  release.ps1  vulture-whitelist.txt  vulture.py  vulture_ignore.py
.github/workflows/: ci-cd.yml
app/: main.py
docs/: conf.py  index.rst
hooks/: block_env.py  vulture-wrapper.py
tests/: conftest.py  test_health.py
