[project]
name = "poetry-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Tony Narloch",email = "tnarloch@hotmail.co.uk"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.128.4,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.15.0,<0.16.0)",
    "isort (>=7.0.0,<8.0.0)",
    "prettier (>=0.0.7,<0.0.8)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "radon (>=6.0.1,<7.0.0)",
    "vulture (>=2.14,<3.0)",
    "pylint (>=4.0.4,<5.0.0)",
    "bandit (>=1.9.3,<2.0.0)",
    "commitizen (>=4.13.6,<5.0.0)",
    "astroid (>=4.0.4,<5.0.0)",
    "wrapt (>=1.14.0,<2)",
    "sphinx (>=9.1.0,<10.0.0)"
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
